src/test/deca/syntax/invalid/parser/oracle/method_type2.deca
class A { éa a (){} }
